<resources>
    <string name="app_name" translatable="false">Т-Обеды</string>
    <string name="lunches" translatable="false">Обеды</string>
    <string name="enter" translatable="false">Войти</string>
    <string name="password" translatable="false">Пароль</string>
    <string name="login" translatable="false">Логин</string>
    <string name="entrance" translatable="false">Вход</string>
    <string name="regisration" translatable="false">Регистрация</string>
    <string name="sign_up_question" translatable="false">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="sign_in_question" translatable="false">Уже зарегистрированы? Войти</string>
    <string name="name" translatable="false">Имя</string>
    <string name="surname" translatable="false">Фамилия</string>
    <string name="telegram_contact" translatable="false">Ник в телеграм</string>
    <string name="office_pick" translatable="false">Офис</string>
    <string name="join" translatable="false">Присоединиться</string>
    <string name="lunch_from" translatable="false">%s %s приглашает на обед</string>
    <string name="time_of_lunch" translatable="false">%s</string>
    <string name="avatar" translatable="false">Аватар</string>
    <string name="office" translatable="false">Офис</string>
    <string name="signup" translatable="false">Зарегистрироваться</string>

    <string name="login_error_message" translatable="false">Введите логин</string>
    <string name="password_error_message" translatable="false">Введите пароль</string>
    <string name="name_error_message" translatable="false">Введите имя</string>
    <string name="surname_error_message" translatable="false">Введите фамилию</string>
    <string name="telegram_error_message" translatable="false">Введите ник в телеграм</string>

    <string name="default_alert_title" translatable="false">Ошибка</string>
    <string name="default_alert_message" translatable="false">Что-то пошло не так</string>
    <string name="default_alert_positive_button_message" translatable="false">Ок</string>
    <string name="please_wait" translatable="false">Пожалуйста, подождите...</string>
    <string name="profile" translatable="false">Профиль</string>
    <string name="telegram" translatable="false">Телеграм</string>
    <string name="logout" translatable="false">Выйти</string>
    <string name="new_event" translatable="false">Новое событие</string>
    <string name="time" translatable="false">Время</string>
    <string name="place" translatable="false">Место</string>
    <string name="custom_place" translatable="false">Свое место</string>
    <string name="kitchen" translatable="false">Кухня</string>
    <string name="enter_custom_place_name" translatable="false">Введите название места</string>
    <string name="notes" translatable="false">Примечания</string>
    <string name="notes_hint" translatable="false">Место сбора и т.п. (необязательно)</string>
    <string name="create" translatable="false">Создать</string>

    <string name="no_lunches" translatable="false">Пока что нет событий.\nБудьте первым, кто его создаст!</string>
    <string name="something_went_wrong" translatable="false">Что-то пошло не так.\nПопробуйте снова.</string>

    <plurals name="number_of_participants">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>
</resources>
