<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="32dp"
    app:behavior_draggable="true">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/time_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_subheader" />

    <TextView
        android:id="@+id/place_subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:text="@string/place"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_recycler" />

    <LinearLayout
        android:id="@+id/place_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_subheader">

        <include layout="@layout/item_lunch_place_kitchen" />

        <include layout="@layout/item_lunch_place_other" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/custom_place_field"
        style="@style/inputTextFieldContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_custom_place_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/place_layout"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/note_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_place_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notes_field"
        style="@style/inputTextFieldContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_hint"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_field"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow"
        android:fontFeatureSettings="liga 0"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_field" />

</androidx.constraintlayout.widget.ConstraintLayout>
